--- a/OpenGL.vcxproj.filters
+++ b/OpenGL.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
