--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="TextureData.cpp" />
     <ClCompile Include="Ui.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -169,6 +170,7 @@
     <ClInclude Include="shader.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="TextureData.h" />
     <ClInclude Include="Ui.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
